# slatec

./: .gitignore  CMakeLists.txt  exclude_from_shared.cmake  slatec.xsd
src/: CMakeLists.txt  d1mach.f  daxpy.f  slatec_source_files.cmake  user_interface_files.cmake
test/: CMakeLists.txt
